Fix dropdown mouse enter / mouse leave issue by wrapping icon and dropdown in a div. Place those event listeners on this div

--- a/app/assets/stylesheets/components/nav_bar.scss
+++ b/app/assets/stylesheets/components/nav_bar.scss
@@ -129,6 +129,12 @@
   background-color: #8aac42;
 }
 
+#login {
+  color: rgba(255,255,255,.5);
+  font-weight: 700;
+  font-size: 14px;
+}
+
 #login:hover{
   color: #FFF;
 }
